[package]
name = "bus-factor"
version = "0.1.0"
authors = ["Wojciech Kargul <wojciech.kargul@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = ["json"] }
octocrab = "0.13"
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
structopt = "0.3.25"